# rock-in

./: .gitignore  README.md  README.md~
arm_goal/: CMakeLists.txt  package.xml
arm_goal/launch/: test_arm_goal.launch  test_moveit_cart.launch
arm_goal/src/: arm_goal.cpp
basic_navigation/: package.xml
basic_navigation/src/: base_test.cpp
datamatrix_finder/src/: datamatrix_finder.cpp  datamatrix_finder.cpp~
datamatrix_finder_sim/: CMakeLists.txt  package.xml
datamatrix_finder_sim/src/: datamatrix_finder_sim.cpp
devel/: .catkin  .rosinstall  _setup_util.py  setup.sh
devel/etc/catkin/profile.d/: 05.catkin-test-results.sh
devel/lib/basic_navigation/: basic_navigation_node
devel/lib/pkgconfig/: basic_navigation.pc
devel/share/basic_navigation/cmake/: basic_navigationConfig.cmake
fake_tf_pub/: CMakeLists.txt  package.xml
fake_tf_pub/src/: fake_tf_pub.cpp
goto_datamatrix/: CMakeLists.txt  package.xml
goto_datamatrix/src/: goto_datamatrix.cpp
kinematics/: CMakeLists.txt  frames.gv  package.xml
kinematics/launch/: kinematic_model_tutorial.launch  ros_api_tutorial.launch
kinematics/src/: JacobianTest.cpp  dasds  kinematic_model_tutorial.cpp
marker_localization/: CMakeLists.txt  CMakeLists.txt~
mir_helloworld/: CMakeLists.txt  package.xml
move_it/: .setup_assistant  CMakeLists.txt
move_it/config/: joint_limits.yaml
move_it/launch/: default_warehouse_db.launch  move_group.launch
moveit/scripts/: backup_rockin_move_group.py
object_detection/Cat10_MDB/banana/: Banana_v01_L3.ply
object_detection/Cat10_MDB/car/: 2DoorCoupe.ply  4DoorSedan_V3_L2.ply
object_detection/Cat10_MDB/hammer/: sledge_hammer.ply
object_detection/Cat10_MDB/tetra_pak/: Milch.ply  apfelesaft.ply
object_detection/Cat10_MDB/toilet_paper/: tlt_paper_sm_sm.ply
object_detection/TrackerQt/: CMakeLists.txt  LICENSE  README  tracking.conf
object_detection/TrackerQt/apps/: CMakeLists.txt
object_detection/TrackerQt/apps/TrackerQt/: .mainwindow.cpp.kate-swp  CMakeLists.txt  gltracker.cpp  gltracker.h  mainwindow.cpp  mainwindow.h  mainwindow.h~  mainwindow.ui  params.cpp  params.h  params.ui  recognizer.cpp  recognizer.h  sensor.cpp  sensor.h  tracker-gui.pro
object_detection/TrackerQt/resources/: Canette-scaled.ply  Canette.ply  GuteLaune.ply  Sans.ply  can-textured.ply  can-textured.sift  can.ply  can2-textured.ply  can2-textured.sift  can2.ply  coca_cola_mesh.ply  tea.ply
object_detection/TrackerQt/v4r/: CMakeLists.txt
object_detection/TrackerQt/v4r/Recognizer3D/: Array.hh  Array.ic  CMakeLists.txt  CodebookEntry.cc  CodebookEntry.hh  CodebookEntry.ic  Config.cc  Config.hh  ConfigFile.cc  ConfigFile.hh  Definitions.cc  Definitions.hh  DetectGPUSIFT.cc  DetectGPUSIFT.hh  DetectSIFT.cc  DetectSIFT.hh  Except.cc  Except.hh  Geometry.cc  Geometry.hh  Geometry.ic  Homography.cc  Homography.hh  Homography.ic  KeyClusterPair.hh  Keypoint.cc  Keypoint.hh  KeypointDescriptor.cc  KeypointDescriptor.hh  KeypointPair.hh  Main.cc  Math.cc  Math.hh  Math.ic  ModelObject3D.cc  ModelObject3D.hh  ODetect3D.cc  ODetect3D.hh  Object3D.cc  Object3D.hh  (+22 more)
object_detection/TrackerQt/v4r/TomGine/: tgError.cpp  tgRenderModel.cpp  tgRenderModel.h  tgTomGineThread.cpp  tgTomGineThread.h
object_detection/TrackerQt/v4r/TomGineIP/: CMakeLists.txt  README  tgHistDesc2D.cpp  tgHistDesc2D.h  tgHistogram.cpp  tgHistogram.h  tgImageProcessor.cpp  tgImageProcessor.h  tgNurbsCurve.cpp  tgNurbsCurve.h  tgNurbsSurface.cpp  tgNurbsSurface.h  tgNurbsVolume.cpp  tgNurbsVolume.h  tgPlotIP.cpp  tgPlotIP.h  tgShader.cpp  tgShader.h
object_detection/TrackerQt/v4r/TomGineIP/shader/: ImageDiff.frag  ipDotConvolution.frag  ipGradientsX.frag  ipGradientsY.frag  ipSobel.frag  ipSobelAdaptive.frag  ipSpreading.frag  ipThinning.frag  texColorTest.frag  texEdgeTest.frag  texTexCoords.frag
object_detection/TrackerQt/v4r/Tracker/: CMakeLists.txt  Distribution.cpp  Distribution.h  EdgeTracker.cpp  EdgeTracker.h  Filter.h  ModelEntry.cpp  ModelEntry.h  ModelLoader.cpp  ModelLoader.h  Noise.cpp  Noise.h  Particle.cpp  Particle.h  PlyStructure.h  Predictor.cpp  Predictor.h  Resources.cpp  Resources.h  TextureTracker.cpp  TextureTracker.h  Timer.cpp  Timer.h  Tracker.cpp  Tracker.h  TrackerAPI.h  TrackerModel.cpp  TrackerModel.h  headers.h  myPredictor.cpp  myPredictor.h  ply.c
object_detection/TrackerQt/v4r/Tracker/example/: CMakeLists.txt  main_tracker.cpp
object_detection/TrackerQt/v4r/Tracker/example/Resources/: tracking.ini
object_detection/marker_localization/: package.xml  package.xml~
object_detection/marker_localization/src/: agent_marker_localization_node.cpp
object_detection/rec-track/: README.md
object_detection/rec-track/src/rec/: CMakeLists.txt  CMakeLists.txt~  package.xml
object_detection/rec-track/src/rec_msg_and_serv/: CMakeLists.txt~  package.xml
object_detection/rec-track/src/rec_test/: CMakeLists.txt
object_detection/stl_viewer/: viewstl
src/basic_navigation/: CMakeLists.txt
src/basic_navigation/src/: base_test.cpp
src/datamatrix_finder/: CMakeLists.txt  CMakeLists.txt~  package.xml
src/datamatrix_finder/msg/: Datamatrix.msg
src/datamatrix_finder/src/: datamatrix_finder.cpp
src/marker_localization/: package.xml
src/marker_localization/launch/: marker_localization.launch  marker_localization.launch~
src/marker_localization/src/: agent_marker_localization_node.cpp  agent_sharpening_filter_node.cpp~
src/move_it/: package.xml
src/move_it/config/: youbot.srdf
src/move_it/launch/: demo.launch  planning_context.launch  sensor_manager.launch.xml  trajectory_execution.launch.xml
src/object_detection/Cat10_MDB/bottle/: ketchup_bottle.ply  milkbottle.ply
src/object_detection/Cat10_MDB/bowl/: SqrBowl.ply  sqbowl.ply
src/object_detection/Cat10_MDB/car/: 2DoorSportscar_V1_L1.ply
src/object_detection/strands-object-classification/: README.md
tf_xlistener/: CMakeLists.txt  package.xml
tf_xlistener/scripts/: tf_xlistener.py
virtual_object/: CMakeLists.txt  package.xml
virtual_object/launch/: virtual_object.launch
virtual_object/src/: virtual_object.cpp
(+35 files in other folders)
