<?xml version="1.0"?>
<package>
  <name>kinematics</name>
  <version>0.0.0</version>
  <description>The youbot_moveit_kinematics package</description>
  <maintainer email="shehzi001@gmail.com">shehzad</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>moveit_core</build_depend>
  <build_depend>moveit_ros_planning</build_depend>
  <build_depend>moveit_ros_planning_interface</build_depend>
  <build_depend>pluginlib</build_depend>
  <build_depend>roscpp</build_depend>
  
  <run_depend>moveit_core</run_depend>
  <run_depend>moveit_ros_planning</run_depend>
  <run_depend>moveit_ros_planning_interface</run_depend>
  <run_depend>pluginlib</run_depend>
  <run_depend>roscpp</run_depend>

</package>
